# University

./: .gitmodules
S3/individual/app/python/: .gitignore  main.py  pyproject.toml
S3/individual/app/python/artifacts/models/: xgb_randomized_early_stopping.pkl
S3/individual/app/python/data/models/: xgboost.pkl
S3/individual/app/python/data/processed/: barbershop_synthetic_data_processed.csv
S3/individual/app/python/data/raw/: barbershop_synthetic_data.csv
S3/individual/app/python/docs/: self-notes.md
S3/individual/app/python/notebook/: experiment-no-grid.ipynb  experiment.ipynb  medical_analysis.ipynb  model_analysis.ipynb
S3/individual/app/python/notebook/syntetihic/: experiment.ipynb  model_analysis.ipynb
S3/individual/app/python/src/: __init__.py
S3/individual/app/python/src/api/: app.py  schemas.py
S3/individual/app/python/src/config/: config.py
S3/lab/titanic_survival_rater/: .gitignore  README.md  main.py  pyproject.toml
S3/lab/titanic_survival_rater/data/processed/: decision_tree_model.pkl  titanic_processed.csv
S3/lab/titanic_survival_rater/docs/: ARCHITECTURE.md
S3/lab/titanic_survival_rater/notebook/: model.ipynb  titanic-survival-rater.ipynb  visualisation-forest.ipynb  visualization-tree.ipynb  visualization.ipynb
S3/lab/titanic_survival_rater/src/: __init__.py
S3/lab/titanic_survival_rater/src/data/: __init__.py  generate_data.py  loader.py  preprocessing.py
S3/lab/titanic_survival_rater/src/models/: __init__.py  predict.py  train.py
S3/lab/titanic_survival_rater/src/utils/: __init__.py  config.py
python/: main.py
(+510 files in other folders)
